--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta charset="utf-8"/>
 	</head>
 	<body>
+		<h4>Título do meu texto</h4>
+		<h3>Título do meu texto</h3>
+		<h2>Título do meu texto</h2>
+		<h1>Título do meu texto</h1>
 
+		<p>Um texto maior para o meu WebSite</p>
 	</body>
-</html>
+</html> 
