--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 	<meta charset="utf-8"/>
 	</head>
 	<body>
-		<h4>Título do meu texto</h4>
-		<h3>Título do meu texto</h3>
 		<h2>Título do meu texto</h2>
-		<h1>Título do meu texto</h1>
+		
+		<span>Um texto maior para o meu WebSite do curso de webmaster pro</span>
+		<br/>
+		<span>Um texto maior para o meu WebSite do curso de webmaster pro</span>
+		<br/>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae orci tincidunt, euismod risus viverra, vestibulum dolor. Donec luctus mi vel dui egestas, id sagittis metus cursus. Donec in nulla sit amet nunc aliquam malesuada ac in nulla. Maecenas ut massa odio. Ut fringilla et lectus id vestibulum. Vivamus feugiat pretium purus eu egestas. Vivamus viverra lacus lorem. Praesent vel ex in tortor sodales lacinia ac sit amet libero. Vestibulum vitae augue eros. Mauris sollicitudin elit at justo venenatis porta. Duis mollis arcu ullamcorper, scelerisque lorem sit amet, interdum justo. </p>
 
-		<p>Um texto maior para o meu WebSite</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae orci tincidunt, euismod risus viverra, vestibulum dolor. Donec luctus mi vel dui egestas, id sagittis metus cursus. Donec in nulla sit amet nunc aliquam malesuada ac in nulla. Maecenas ut massa odio. Ut fringilla et lectus id vestibulum. Vivamus feugiat pretium purus eu egestas. Vivamus viverra lacus lorem. Praesent vel ex in tortor sodales lacinia ac sit amet libero. Vestibulum vitae augue eros. Mauris sollicitudin elit at justo venenatis porta. Duis mollis arcu ullamcorper, scelerisque lorem sit amet, interdum justo. </p>
 	</body>
 </html> 
