--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 		<br/>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae orci tincidunt, euismod risus viverra, vestibulum dolor. Donec luctus mi vel dui egestas, id sagittis metus cursus. Donec in nulla sit amet nunc aliquam malesuada ac in nulla. Maecenas ut massa odio. Ut fringilla et lectus id vestibulum. Vivamus feugiat pretium purus eu egestas. Vivamus viverra lacus lorem. Praesent vel ex in tortor sodales lacinia ac sit amet libero. Vestibulum vitae augue eros. Mauris sollicitudin elit at justo venenatis porta. Duis mollis arcu ullamcorper, scelerisque lorem sit amet, interdum justo. </p>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae orci tincidunt, euismod risus viverra, vestibulum dolor. Donec luctus mi vel dui egestas, id sagittis metus cursus. Donec in nulla sit amet nunc aliquam malesuada ac in nulla. Maecenas ut massa odio. Ut fringilla et lectus id vestibulum. Vivamus feugiat pretium purus eu egestas. Vivamus viverra lacus lorem. Praesent vel ex in tortor sodales lacinia ac sit amet libero. Vestibulum vitae augue eros. Mauris sollicitudin elit at justo venenatis porta. Duis mollis arcu ullamcorper, scelerisque lorem sit amet, interdum justo. </p>
+		<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae orci tincidunt, euismod risus viverra, vestibulum dolor. Donec luctus mi vel dui egestas, id sagittis metus cursus. Donec in nulla sit amet nunc aliquam malesuada ac in nulla. Maecenas ut massa odio. Ut fringilla et lectus id vestibulum. Vivamus feugiat pretium purus eu egestas. Vivamus viverra lacus lorem. Praesent vel ex in tortor sodales lacinia ac sit amet libero. Vestibulum vitae augue eros. Mauris sollicitudin elit at justo venenatis porta. Duis mollis arcu ullamcorper, scelerisque lorem sit amet, interdum justo. </span>
+	
+		<img src="imagens/paisagem.jpg" width="300"  height="150" />
+		<br/>
+		<a href="https://www.youtube.com/">YouTube</a>
+
 	</body>
 </html> 
