Estrutura basica de uma tabela

--- a/Conteudo/tabela.html
+++ b/Conteudo/tabela.html
@@ -5,15 +5,22 @@
 	<meta charset="utf-8"/>
 	</head>
 	<body>
-		<div>
-			<h2>Título do meu Conteudo</h2>
-			<p>Conteudo</p>
-		</div>
+		<table>
+			<tr>
+				<td>
+					Nome
+				</td>
 
-		<div>
-			<h2>Título do meu Conteudo</h2>
-			<p>Conteudo</p>
-		</div>
-		
+				<td>
+					Idade
+				</td>
+
+				<td>
+					Cargo
+				</td>
+
+			</tr>
+
+		</table>
 	</body>
 </html> 
