Aula sobre estrutura basica de tabelas

--- a/Conteudo/tabela.html
+++ b/Conteudo/tabela.html
@@ -5,22 +5,39 @@
 	<meta charset="utf-8"/>
 	</head>
 	<body>
-		<table>
+		<div>	
+		<!---
+		<h2>Titulo do Conteudo</h2>
+		<p>Conteudo</p>
+
+		<h2>Titulo do Conteudo</h2>
+		<p>Conteudo</p>
+		--->		
+		</div>
+		
+		<table width="900" align="right" border="2">
 			<tr>
 				<td>
 					Nome
 				</td>
-
 				<td>
 					Idade
 				</td>
-
 				<td>
 					Cargo
 				</td>
-
 			</tr>
-
+			<tr>
+				<td>
+					Abraão
+				</td>
+				<td>
+					21
+				</td>
+				<td>
+					Desenvolvedor
+				</td>
+			</tr>
 		</table>
 	</body>
 </html> 
