Final modulo ENTENDENDO O HTML

--- a/Conteudo/index.html
+++ b/Conteudo/index.html
@@ -17,7 +17,7 @@
 	
 		<img src="imagens/paisagem.jpg" width="300"  height="150" />
 		<br/>
-		<a href="https://www.youtube.com/">YX	ouTube</a>
+		<a href="https://www.youtube.com/">YouTube</a>
 
 	</body>
 </html> 
