--- a/MODULO_03_INICIANDO_COM_O_CSS/index.html
+++ b/MODULO_03_INICIANDO_COM_O_CSS/index.html
@@ -1,27 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <title>Page Title</title>
-    <style>
-        h1{
-            color: orange;
-            background: black;
-        }
-        h2{
-            color: blue;
-        }
-        a{
-            text-decoration: none;
-        }
-    </style>
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
+
 <body>
-    <h1>Título com H1</h1>
-    <h2>Título com H2</h2>
-    <h3>Título com H3</h3>
-    <h4>Título com H4</h4>
-    <h5>Título com H5</h5>
-    <a href="">Meu Link!</a>
+    <div>
+
+
+    </div>
 </body>
 </html>
