Final da aula sobre Estilos Externos, IDs e Classes

--- a/MODULO_03_INICIANDO_COM_O_CSS/index.html
+++ b/MODULO_03_INICIANDO_COM_O_CSS/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-    <div>
-
-
+    <div id="div01" class="div01">
+        <h1>Titulo 01</h1>
+    </div>
+    <div id="div01" class="div02">
+        <h1>Titulo 02</h1>
     </div>
 </body>
 </html>
