--- a/MODULO_03_INICIANDO_COM_O_CSS/index.html
+++ b/MODULO_03_INICIANDO_COM_O_CSS/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <div id="div01" class="div01">
-        <h1>Titulo 01</h1>
-    </div>
-    <div id="div01" class="div02">
-        <h1>Titulo 02</h1>
-    </div>
+    <div class="artigo">
+
+        <h1>Lorem Ipsum</h1>
+        <b>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</b>
+
+    </div><!---Comentário --class"artigo"-- -->
 </body>
 </html>
